[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Hood.gd" type="Script" id=1]
[ext_resource path="res://assets/img/player/cloack.png" type="Texture" id=2]
[ext_resource path="res://scenes/useLbl.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Righteous-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 73.2514, 74.3185 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.596078, 0.580392, 0.580392, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 13
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 3.0

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = ExtResource( 4 )

[node name="Hood" type="Area2D"]
position = Vector2( 497.594, -613.615 )
scale = Vector2( 0.663149, 0.663149 )
script = ExtResource( 1 )

[node name="cloak" type="Sprite" parent="."]
position = Vector2( -8.63937, -0.201351 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 6 )

[node name="useLbl" parent="." instance=ExtResource( 3 )]
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Hood_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Hood_body_exited"]
